--- a/public/party.html
+++ b/public/party.html
@@ -55,13 +55,13 @@
   </div>
   
   <p class="important-info">
-    <code>v1.06</code>
+    <code>v1.07</code>
     <br>
     Your public Internet Protocol (IP) address is <b>NOT</b> recorded or saved
     <br>
     Copyright © - 2018 (<a target="_blank" href="https://github.com/NotWeeb">@NotWeeb</a>)
     <br>
-    <code><a href="?the_music_has_been_disabled_as_requested_sir">Disable Music</a></code> | <code><a target="_blank" href="https://github.com/NotWeeb/mypip-pw">Source</a></code>
+    <code><a href="?the_music_has_been_disabled_as_requested_sir">Disable Music</a></code> | <code><a target="_blank" href="https://github.com/NotWeeb/mypip-pw">Sauce</a></code>
   </p>
   
   <audio id="audio"><source src="bensound-theelevatorbossanova.mp3" type="audio/mpeg"></audio>
