some neaaaat update
better confetti, now explodes from the corners!!!!!!!!!!!
SEO stuff
better mobile stuff???

--- a/public/party.html
+++ b/public/party.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>My Public IP</title>
+	
+	<meta name="robots" content="index, follow" />
   
+  <meta charset="utf-8" />
+  <meta name="mobile-web-app-capable" content="no" />
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="theme-color" content="#7548ab" />
 
   <link rel="icon" type="image/png" href="pip_icon.png" />
-
-  <meta charset="utf-8" />
-  <meta name="mobile-web-app-capable" content="no" />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta name="twitter:url"          content="https://mypip.pw/" />
   <meta property="og:url"           content="https://mypip.pw/" />
@@ -27,9 +30,9 @@
   <meta name="twitter:image"        content="https://mypip.pw/pip_logo.png" />
   <meta property="og:image"         content="https://mypip.pw/pip_logo.png" />
 
-  <meta name="twitter:description"  content="Get your public IP address in the coolest way!" />
-  <meta property="og:description"   content="Get your public IP address in the coolest way!" />
-  <meta name="description"          content="Get your public IP address in the coolest way!" />
+  <meta name="twitter:description"  content="What is my Public IP? Get your public IP address in the coolest way!" />
+  <meta property="og:description"   content="What is my Public IP? Get your public IP address in the coolest way!" />
+  <meta name="description"          content="What is my Public IP? Get your public IP address in the coolest way!" />
   
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -55,7 +58,7 @@
   </div>
   
   <p class="important-info">
-    <code>v1.09</code>
+    <code>v1.10</code>
     <br>
     Your public Internet Protocol (IP) address is <b>NOT</b> recorded or saved
     <br>
