the small details count

--- a/public/party.html
+++ b/public/party.html
@@ -60,9 +60,9 @@
   </div>
   
   <p class="important-info doTheShake">
-    <code>v1.15</code>
+    <code>v1.16</code>
     <br>
-    Your public Internet Protocol (IP) address is <b class="this-is-not-an-easter-egg">NOT</b> recorded or saved
+    Your public Internet Protocol (IP) address is <b title="*HEAD BANGS*" class="this-is-not-an-easter-egg">NOT</b> recorded or saved
     <br>
     Copyright © - 2018 (<a target="_blank" href="https://github.com/NotWeeb">@NotWeeb</a>)
     <br>
