--- a/public/party.html
+++ b/public/party.html
@@ -64,8 +64,10 @@
     <br>
     Your public Internet Protocol (IP) address is <b title="*HEAD BANGS*" class="this-is-not-an-easter-egg">NOT</b> recorded or saved
     <br>
-    Copyright © - 2018 (<a target="_blank" href="https://github.com/NotWeeb">@NotWeeb</a>)
+    Copyright © - 2019 (<a target="_blank" href="https://github.com/NotWeeb">@NotWeeb</a>)
     <br>
+	  Lizard is a big nerd
+  <br>
     <code class="musicDisabler" onclick="disableMusic(this)"><a>Disable Music</a></code> | <code><a target="_blank" href="https://github.com/NotWeeb/mypip-pw">Sauce</a></code>
   </p>
   
