--- a/public/party.html
+++ b/public/party.html
@@ -12,7 +12,7 @@
 	
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="theme-color" content="#7548ab" />
+  <meta name="theme-color" content="#cb1567" />
 
   <link rel="icon" type="image/png" href="pip_icon.png" />
 
@@ -43,14 +43,14 @@
 	<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
   
   <link href="https://fonts.googleapis.com/css?family=K2D|Montserrat|Bai+Jamjuree" rel="stylesheet">
-  <link href="styles.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   
 </head>
 <body>
   <canvas id="canvas" class="doTheShake"></canvas>
   <h1 class="noselect doTheShake">My Public IP</h1><h4 class="doTheShake" onclick="window.location.href = '?nice_meme'">MyPIP.pw</h4>
-  <div class="info-container">
-    <div class="info-box doTheShake">
+  <div class="info-container doTheShake">
+    <div class="info-box">
       <div class="top" title="Double click here to get the stuff without the party :(">
         <h3 class="noselect">Here is your Public IP</h3>
         <button class="copyIP" copyable="true" title="Click for a party!">COPY</button>
@@ -60,7 +60,7 @@
   </div>
   
   <p class="important-info doTheShake">
-    <code>v1.16</code>
+    <code>v1.17</code>
     <br>
     Your public Internet Protocol (IP) address is <b title="*HEAD BANGS*" class="this-is-not-an-easter-egg">NOT</b> recorded or saved
     <br>
