--- a/public/party.html
+++ b/public/party.html
@@ -72,7 +72,7 @@
   </p>
   
   <audio id="audio"><source src="bensound-theelevatorbossanova.mp3" type="audio/mpeg"></audio>
-  <audio id="yeetAudio"><source src="omen-003.wav" type="audio/mpeg"></audio>
+  <audio id="yeetAudio"><source src="omen-003.mp3" type="audio/mpeg"></audio>
 
   
   <script src="confetti.js"></script>
