--- a/public/thc.html
+++ b/public/thc.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Thigh High Club</title>
-	
+  <title>Thigh High Club | Discord Server</title>
+
   <meta name="robots" content="index, follow" />
-  
+
   <meta charset="utf-8" />
   <meta name="mobile-web-app-capable" content="no" />
 
-  <meta name="theme-color" content="#cb1567" />
+  <meta name="theme-color" content="#8b0a56" />
 
-  <link rel="icon" type="image/png" href="pip_icon.png" />
+  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/icons/525721047413161994/515aaac3abd9f7a13f70e7b0ad6f8923.png" />
 
   <meta name="twitter:url"          content="https://thighhigh.club/" />
   <meta property="og:url"           content="https://thighhigh.club/" />
@@ -18,19 +18,19 @@
 
   <meta property="og:site_name"     content="thighhigh.club" />
 
-  <meta itemprop="name"             content="Thigh High Club" />
-  <meta name="twitter:title"        content="Thigh High Club" />
-  <meta property="og:title"         content="Thigh High Club" />
+  <meta itemprop="name"             content="Thigh High Club | Discord Server" />
+  <meta name="twitter:title"        content="Thigh High Club | Discord Server" />
+  <meta property="og:title"         content="Thigh High Club | Discord Server" />
 
-  <meta itemprop="image"            content="https://thighhigh.club/886PM.png" />
-  <meta name="twitter:image"        content="https://thighhigh.club/886PM.png" />
-  <meta property="og:image"         content="https://thighhigh.club/886PM.png" />
+  <meta itemprop="image"            content="https://cdn.discordapp.com/icons/525721047413161994/515aaac3abd9f7a13f70e7b0ad6f8923.png" />
+  <meta name="twitter:image"        content="https://cdn.discordapp.com/icons/525721047413161994/515aaac3abd9f7a13f70e7b0ad6f8923.png" />
+  <meta property="og:image"         content="https://cdn.discordapp.com/icons/525721047413161994/515aaac3abd9f7a13f70e7b0ad6f8923.png" />
 
   <meta name="twitter:description"  content="Connect with others over everything! Socialize, hangout, meet new friends ❤" />
   <meta property="og:description"   content="Connect with others over everything! Socialize, hangout, meet new friends ❤" />
   <meta name="description"          content="Connect with others over everything! Socialize, hangout, meet new friends ❤" />
 
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/zzx3seX" />
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/wnFENDJ" />
 
 </head>
 </html>
